<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BrainSlice</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="learn_icon">&#xf0a6;</string>
    <string name="visualise_icon">&#xf030;</string>
    <string name="help_icon">&#xf128;</string>
    <string name="settings_icon">&#xf013;</string>
    <string name="centre_icon">&#xf05b;</string>
    <string name="volume_icon">&#xf028;</string>
    <string name="volume_icon_mute">&#xf026;</string>
    <string name="quiz_icon">&#xf14a;</string>
    <string name="about_icon">&#xf129;</string>
    <string name="loadingMessage">Loading…</string>
    <string name="quiz_button_text">Quiz</string>
    <string name="learn_button_text">Learn</string>
    <string name="visualise_button_text">Visualise</string>
    <string name="help_button_text">Help</string>
    <string name="sound_button_text_unmuted">Sound ON</string>
    <string name="sound_button_text_muted">Sound OFF</string>
    <string name="ColourCodingSetting">Colour coding</string>
    <string name="XRayModeSetting">X-ray mode</string>
    <string name="welcome_message">Welcome to BrainSlice</string>
    <string name="card1text2">Swipe right to start the tutorial</string>
    <string name="card1text3">Swipe left to skip the tutorial</string>
    <string name="card2text1">Learn Mode:</string>
    <string name="card2text2">Touch the circles to learn about the brain</string>
    <string name="card2text3">Use your finger to move the brain around</string>
    <string name="card3text1">Visualise Mode:</string>
    <string name="card3text2">Place the device on a friend\'s forehead to start</string>
    <string name="card3text3">Move the device around your friend\'s head to see their brain!</string>
    <string name="card4text1">Quiz Mode:</string>
    <string name="card4text2">Just follow the instructions in this mode to test your knowledge on the brain</string>
    <string name="card4text3">Be sure to pay attention and try and get as many correct as you can!</string>
    <string name="card5text1">Settings:</string>
    <string name="card5text2">You can use the buttons in the bottom right to make half the brain see-through or to colour in the brain!</string>
    <string name="colour">Colour</string>
    <string name="xray">X-Ray</string>
    <string name="Calibrate">Calibrate</string>
    <string name="TeamName">Team Lemon Slice</string>
    <string name="HomeScreen_Title">BRAIN SLICE</string>
    <string name="Brainder_License_Message">3D Brain Model by A. M. Winkler is licensed under a Creative Commons Attribution-ShareAlike 3.0 Unported License. The original work can be found at http://brainder.ord/brain-for-blender</string>
    <string name="LearnMode">Learn Mode</string>
    <string name="WindowMode">Window Mode</string>
    <string name="BrainQuiz">Brain Quiz</string>
    <string name="Quiz_Play_Button">Play!</string>

</resources>
